# SWOGL

./: .clang-format  CMakeLists.txt  CMakePresets.json
cmake/: swogl-config.cmake.in  utils.cmake
examples/add/: CMakeLists.txt  main.cpp
include/swogl/: export.h  swogl.h
src/: swogl.cpp
